# letta

./: .env.clean  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  compose.tracing.yaml  compose.yaml  dev-compose.yaml  development.compose.yml  locust_test.py  mcp_test.py  otel-collector-config-clickhouse-prod.yaml  otel-collector-config-clickhouse.yaml  otel-collector-config-file-dev.yaml  otel-collector-config-file.yaml  otel-collector-config.yaml  package-lock.json  project.json  pyproject.toml  test_agent_serialization.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: generate_model_sweep_markdown.py
.github/workflows/: code_style_checks.yml  docker-image-nightly.yml  docker-image.yml  docker-integration-tests.yaml  integration_tests.yml  letta-code-sync.yml  migration-test.yml  model-sweep.yaml  notify-letta-cloud.yml  send-message-integration-tests.yaml  test-pip-install.yml  tests.yml
alembic/: env.py
alembic/versions/: 0335b1eb9c40_add_batch_item_id_to_messages.py  05c3bc564286_add_metrics_to_agent_loop_runs.py  06fbbf65d4f1_support_for_project_id_for_blocks_and_.py  08b2f8225812_adding_toolsagents_orm.py  0b496eae90de_add_file_agent_table.py  0ceb975e0063_add_llm_batch_jobs_tables.py  15b577c62f3f_add_hidden_property_to_agents.py  167491cfb7a8_add_identities_for_blocks.py  18e300709530_add_instructions_field_to_sources.py  1af251a42c06_fix_files_agents_constraints.py  1c6b6a38b713_add_pip_requirements_to_tools.py  1c8880d671ee_make_an_blocks_agents_mapping_table.py  1dc0fee72dea_add_block_related_indexes.py  1e553a664210_add_metadata_to_tools.py  220856bbf43b_add_read_only_column.py  22a6e413d89c_remove_module_field_on_tool.py  25fc99e97839_fix_alembic_check_warnings.py  28b8765bdd0a_add_support_for_structured_outputs_in_.py  2c059cad97cc_create_sqlite_baseline_schema.py  2cceb07c2384_add_content_parts_to_message.py  2f4ede6ae33b_add_otid_and_tool_return_to_message.py  341068089f14_add_preserve_on_migration_to_block.py  348214cbc081_add_org_agent_id_indices.py  373dabcba6cf_add_byok_fields_and_unique_constraint.py  3c683a662c82_migrate_jobs_to_the_orm.py  400501b04bf0_add_per_agent_environment_variables.py  416b9d2db10b_repurpose_jobusagestatistics_for_new_.py  4537f0996495_add_start_end_for_agent_file.py  46699adc71a7_add_unique_constraint_to_source_names_.py  47d2277e530d_add_total_chunks_and_chunks_embedded_to_.py  495f3f474131_write_source_id_directly_to_files_agents.py  4c6c9ef0387d_support_modal_sandbox_type.py  4e88e702f85e_drop_api_tokens_table_in_oss.py  51999513bcf1_steps_feedback_field.py  549eff097c71_update_identities_unique_constraint_and_.py  54dec07619c4_divide_passage_table_into_.py  54f2311edb62_add_args_schema_to_tools.py  56254216524f_add_custom_headers_to_mcp_server.py  5987401b40ae_refactor_agent_memory.py  5fb8bba2c373_add_step_metrics.py  (+70 more)
docs/: current-error-solution.md
examples/: Building agents with Letta.ipynb  composio_tool_usage.py  helper.py  langchain_tool_usage.py  mcp_example.py  tool_rule_usage.py
examples/docs/: agent_advanced.py  agent_basic.py  example.py  rest_client.py  tools.py
examples/files/: README.md  example-on-disk.txt  main.py
examples/notebooks/: Agentic RAG with Letta.ipynb  Customizing memory management.ipynb  Introduction to Letta.ipynb  Multi-agent recruiting workflow.ipynb  Visualize Tool Rules.ipynb
examples/personal_assistant_demo/: google_calendar_test_setup.py
examples/sleeptime/: sleeptime_example.py  sleeptime_source_example.py  voice_sleeptime_example.py
examples/swarm/: simple.py  swarm.py
examples/tutorials/: memgpt_rag_agent.ipynb
letta/: __init__.py  agent.py  chat_only_agent.py  config.py  constants.py  dynamic_multi_agent.py  embeddings.py  errors.py  interface.py  log.py  low_latency_agent.py  main.py  memory.py  offline_memory_agent.py  providers.py  round_robin_multi_agent.py  settings.py  sleeptime_agent.py  streaming_interface.py  streaming_utils.py  supervisor_multi_agent.py  system.py  tracing.py  utils.py
letta/agents/: helpers.py  (+10 more)
otel/: otel-collector-config-clickhouse-dev.yaml  otel-collector-config-clickhouse-prod.yaml  otel-collector-config-clickhouse.yaml  otel-collector-config-signoz.yaml  start-otel-collector.sh
performance_tests/: test_agent_mass_creation.py  test_agent_mass_update.py  test_insert_archival_memory.py
prompts/: base.md
sandbox/: modal_executor.py  node_server.py
scripts/: docker-compose.yml  migrate_tools.py
tests/: conftest.py  constants.py  integration_test_agent_tool_graph.py  integration_test_async_tool_sandbox.py  integration_test_batch.py  integration_test_batch_api.py  integration_test_batch_api_cron_jobs.py  integration_test_batch_sdk.py  integration_test_builtin_tools.py  integration_test_chat_completions.py  integration_test_composio.py  integration_test_experimental.py  integration_test_initial_sequence.py  integration_test_modal_sandbox_v2.py  integration_test_multi_agent.py  integration_test_offline_memory_agent.py  integration_test_pinecone_tool.py  integration_test_send_message.py  integration_test_send_message_schema.py  integration_test_sleeptime_agent.py  integration_test_summarizer.py  integration_test_tool_execution_sandbox.py  integration_test_voice_agent.py  manual_test_many_messages.py  manual_test_multi_agent_broadcast_large.py  pytest.ini  test_agent_serialization.py  test_agent_serialization_v2.py  test_ast_parsing.py  test_base_functions.py  test_cli.py  test_client.py  test_client_legacy.py  test_file_processor.py  test_google_embeddings.py  test_letta_agent_batch.py  test_letta_request_schema.py  test_llm_clients.py  test_local_client.py  test_long_running_agents.py  (+27 more)
(+492 files in other folders)
